v7.1: virtual threads — fix 45.9% error rate from rinha submission
The first rinha run hit -3254.16 because each api container was running
a 2-thread fixed pool. Under k6's 900 req/sec arrival profile, anything
past 4 concurrent requests sat in the accept queue until the 2001 ms
timeout fired, producing 21,885 http_errors out of 54,100 (45.9%).

The classifier was perfect on the requests it answered (0 FP, 0 FN).
The fix is purely the executor model:

- App.java: Executors.newVirtualThreadPerTaskExecutor(). Each request
  becomes a virtual thread that gets unmounted from the carrier while
  it waits on the socket. The 0.45 CPU cgroup still caps real work,
  but queueing happens on JVM-managed continuations instead of the
  OS accept queue.
- App.java: HttpServer.create(..., 1024). Larger socket backlog so
  bursts can't fill it before a VT picks them up.
- Dockerfile, docker-compose.yml: drop THREADS env var.

Local k6 with the official rinha test plan now lands at:
  p99 = 56.16 ms, failure rate = 0%, final_score = +4250.56.

Image pushed as anddev741/rinha-fraud-java:v7.1.